@@ -435,7 +435,7 @@ fmt_sng_nc7='NETCDF4_CLASSIC (netCDF4 classic HDF5)'
 # Modify these defaults to save typing later
 a2o_flg='No' # [flg] Atmosphere-to-ocean (only used by Tempest mesh generator)
 add_fll='No' # [flg] Add _FillValue to fields with empty destination cells
-alg_typ='nco_con' # [sng] Algorithm for remapping (bilinear|conserve|conserve2nd|nearestdtos|neareststod|patch|tempest|se2fv_flx|se2fv_stt|se2fv_alt|se2se|fv2se_flx|fv2se_stt|fv2se_alt|fv2fv_flx|fv2fv_stt|nco_con|nco_dwe)
+alg_typ='nco_con' # [sng] Algorithm for remapping (bilinear|conserve|conserve2nd|nearestdtos|neareststod|patch|tempest|se2fv_flx|se2fv_stt|se2fv_alt|se2se|fv2se_flx|fv2se_stt|fv2se_alt|fv2fv_flx|fv2fv_stt|nco_con|nco_idw)
 att_flg='No' # [flg] Add/alter attributes (e.g., _FillValue) before regridding
 bch_pbs='No' # [sng] PBS batch (non-interactive) job
 bch_slr='No' # [sng] SLURM batch (non-interactive) job
@@ -1379,7 +1379,7 @@ elif [ ${wgt_typ} = 'esmf' ]; then
     wgt_exe="${wgt_exe_esmf}"
     wgt_opt="${wgt_opt_esmf}"
 elif [ ${wgt_typ} = 'nco' ]; then
-    if [ "${alg_opt}" = 'nco_dwe' ]; then
+    if [ "${alg_opt}" = 'nco_idw' ]; then
 	wgt_opt_nco="${wgt_opt_nco} --rgr wgt_typ=${alg_opt} --rgr xtr_nsp=${xtr_nsp} --rgr xtr_xpn=${xtr_xpn}"
     fi # alg_opt
     wgt_cmd="${wgt_exe_nco}"
