@@ -1,8 +1,12 @@
-2022-09-22  Charlie Zender  <zender@uci.edu>
+2022-09-23  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.1.1-alpha08 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha08: Backflow';git push
 	git tag -a 5.1.1-alpha08 -m 'all: NSB->NESB';git push --tags
+
+	* ncremap fix bug where alg_opt=nco_idw (though not nco_dwe) was interpreted as nco_con
+
+2022-09-22  Charlie Zender  <zender@uci.edu>
 
 	* Change BitGroomBitRound and 'bgb' to BitGroomRound and 'bgr', respectively
 
